@@ -357,7 +357,7 @@
             </div>
             <div class="popup-form-field">
                 <label for="comment">Comment</label>
-                <textarea name="comment" autofocus rows="4"></textarea>
+                <textarea widget="ui-creme-editor" name="comment" class="ui-creme-editor ui-creme-widget widget-auto" basepath="tiny_mce"></textarea>
             </div>
             <div class="popup-form-field">
                 <label for="image">Image</label>
